--- a/package.json
+++ b/package.json
@@ -11,10 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.5",
     "nodemon": "^2.0.20"
   },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mdak2806/split-pay-app-mongoose-backend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mdak2806/split-pay-app-mongoose-backend/issues"
+  },
+  "homepage": "https://github.com/mdak2806/split-pay-app-mongoose-backend#readme",
   "description": ""
 }
