--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
  SERVER_SECRET_KEY = 'yourSecretKeyHereCHICKEN'
+ MONGODB_CLOUD_URL ='mongodb+srv://Wen:aMWzOXMN7lWCbSz2@cluster0.ommsnh5.mongodb.net/splitpay?retryWrites=true&w=majority'
