--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "db:seed": "node models/seeds.js",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "serve": "node server.js"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "keywords": [],
   "author": "",
