--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
  SERVER_SECRET_KEY='yourSecretKeyHereCHICKEN'
- MONGODB_CLOUD_URL="mongodb+srv://Wen:UPQfBE6KnVNIXgQf@cluster0.ommsnh5.mongodb.net/?retryWrites=true&w=majority"
+ MONGODB_CLOUD_URL="mongodb+srv://Wen:UPQfBE6KnVNIXgQf@cluster0.ommsnh5.mongodb.net/shop?retryWrites=true&w=majority"
