--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
  SERVER_SECRET_KEY='yourSecretKeyHereCHICKEN'
- MONGODB_CLOUD_URL='mongodb+srv://Wen:aMWzOXMN7lWCbSz2@cluster0.ommsnh5.mongodb.net/splitpay?retryWrites=true&w=majority'
+ MONGODB_CLOUD_URL="mongodb+srv://Wen:sp8oFiQZXYtlKPaH@cluster0.ommsnh5.mongodb.net/shop?retryWrites=true&w=majority"
  
