--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
  SERVER_SECRET_KEY='yourSecretKeyHereCHICKEN'
- MONGODB_CLOUD_URL="mongodb+srv://Wen:sp8oFiQZXYtlKPaH@cluster0.ommsnh5.mongodb.net/?retryWrites=true&w=majority"
+ MONGODB_CLOUD_URL="mongodb+srv://Wen:n5qvRaXPC8yQAWap@cluster0.ommsnh5.mongodb.net/?retryWrites=true&w=majority"
  
